[package]
name = "load_file"
description = "Macros to help conveniently load the contents of files during development."
version = "0.1.1"
authors = ["Magnus Hovland Hoff <maghoff@gmail.com>"]
license = "MIT"
repository = "https://github.com/maghoff/load_file"
readme = "README.md"
keywords = []
categories = []

[badges]
travis-ci = { repository = "maghoff/load_file", branch = "master" }
maintenance = { status = "experimental" }
